--- a/FitnessCoach/WebContent/resources/css/style.css
+++ b/FitnessCoach/WebContent/resources/css/style.css
@@ -1,3 +1,51 @@
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
 h1 {font-family: 'Muli', sans-serif;
  	font-size:26px;
  	margin-bottom:18px;
@@ -5,22 +53,23 @@ h1 {font-family: 'Muli', sans-serif;
 
 h2 { font-family: 'Muli', sans-serif;
 	font-size:21px;
-	margin-bottom:18px; }
+	margin-bottom:18px;
 	color:#002F2F;}
 
 p {font-family: 'Gentium Book Basic', serif;}
 
 html, body {
 	height: 100%;
-    width: 800px;
+    width: 100%;
     margin: 0 auto;
 }
 
 #wrapper {
 	background: #EFECCA;
 	color: #002F2F;
-	width: 1200px;
-	margin: 10px auto;
+	height: 100%;
+	width: 100%;
+	
 }
  
 #nav {
@@ -35,7 +84,7 @@ html, body {
 #nav a {
     display: block;
     text-decoration: none;
-    color: black;
+    color:#002F2F;
     background-color: #EFECCA;
     padding: 4px;
 }
