--- a/FitnessCoach/WebContent/resources/css/style.css
+++ b/FitnessCoach/WebContent/resources/css/style.css
@@ -47,16 +47,19 @@ table {
 
 
 h1 {font-family: 'Muli', sans-serif;
- 	font-size:26px;
+ 	font-size:30px;
  	margin-bottom:18px;
  	color:#002F2F;}
 
-h2 { font-family: 'Muli', sans-serif;
+h2 {font-family: 'Muli', sans-serif;
 	font-size:21px;
 	margin-bottom:18px;
 	color:#002F2F;}
 
-p {font-family: 'Gentium Book Basic', serif;}
+p {font-family: 'Gentium Book Basic', serif;
+	font-size:11px;
+	margin-bottom:10px;
+	color:#002F2F;}
 
 html, body {
 	height: 100%;
@@ -65,7 +68,7 @@ html, body {
 }
 
 #wrapper {
-	background: #EFECCA;
+	background: #FEEEBD;
 	color: #002F2F;
 	height: 100%;
 	width: 100%;
@@ -73,10 +76,13 @@ html, body {
 }
  
 #nav {
-	font-family: 'Gentium Book Basic', serif;
-	background-color: #EFECCA;
+	font-family: 'Muli', sans-serif;
+	font-size:21px;
+	margin-bottom:18px;
+	color:#002F2F;
+	background-color: #FEEEBD;
 	float: left;
-	width: 120px;
+	width: 180px;
 	padding-left: 20px;
 	padding-top: 20px;
 }
@@ -85,7 +91,7 @@ html, body {
     display: block;
     text-decoration: none;
     color:#002F2F;
-    background-color: #EFECCA;
+    background-color: #FEEEBD;
     padding: 4px;
 }
  
@@ -97,12 +103,12 @@ html, body {
 }
 #nav a:active {
     color: #002F2F;
-    background-color: #EFECCA;
+    background-color: #FEEEBD;
 }  
    
 #header {
 	position: relative;
-	background: #EFECCA;
+	background: #FEEEBD;
 	color: #002F2F;
 	padding: 10px 20px 10px 20px;
 	border-bottom:1px solid #002F2F;
@@ -111,11 +117,12 @@ html, body {
 #content {
     padding: 50px 50px 50px 50px;
     padding-left: 160px;
-    background-color: #EFECCA;
+    background-color: #FEEEBD;
 }
 
 #top {
-	background-color: #EFECCA;
+	padding: 30px 30px 30px 30px;
+	background-color: #FEEEBD;
 	color: #002F2F;
 	float: left;
 	min-width: 600px;
@@ -124,7 +131,8 @@ html, body {
 }
 
 #editprofile {
-	background-color: #EFECCA;
+	padding: 30px 30px 30px 30px;
+	background-color: #FEEEBD;
 	color: #002F2F;
 	float: left;
 	min-width: 600px;
