--- a/FitnessCoach/WebContent/template/common/commonContent.xhtml
+++ b/FitnessCoach/WebContent/template/common/commonContent.xhtml
@@ -5,22 +5,12 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
-
+	
 <h:head>
         <title>FitnessCoach</title>
 </h:head>
 
-<body>
+<h:body>
 
-	<h:form>
-      <h:panelGrid columns="1">
-         <h:commandLink value="Mein Profil"/>
-         <h:commandLink value="Neuer Eintrag"/>
-         <h:commandLink value="Nachrichten"/>
-         <h:commandLink value="Auswertung"/>
-         <h:commandLink value="Freunde"/>
-       </h:panelGrid>
-     </h:form>
-
-</body>
+</h:body>
 </html>
