--- a/FitnessCoach/WebContent/template/common/commonHeader.xhtml
+++ b/FitnessCoach/WebContent/template/common/commonHeader.xhtml
@@ -5,12 +5,15 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
-	
+
 <h:head>
         <title>FitnessCoach</title>
 </h:head>
+    
+<h:body>
 
-<body>
+	<h1>Der ultimative Fitness-Coach</h1>
+	<h2>Projektarbeit in Java III von Stephanie Gerlich</h2>
 
-</body>
+</h:body>
 </html>
