--- a/FitnessCoach/WebContent/template/common/commonNav.xhtml
+++ b/FitnessCoach/WebContent/template/common/commonNav.xhtml
@@ -15,10 +15,10 @@
 	<h:form>
       <h:panelGrid columns="1">
          <h:commandLink value="Mein Profil" action="profile"/>
-         <h:commandLink value="Neuer Eintrag" action="newentry"/>
-         <h:commandLink value="Nachrichten" action="news"/>
-         <h:commandLink value="Auswertung" action="reporting"/>
          <h:commandLink value="Freunde" action="friends"/>
+         <h:commandLink value="Neuer Eintrag" action="newentry"/>
+         <h:commandLink value="Auswertung" action="reporting"/>
+         <h:commandLink value="Planer" action="planer"/>
        </h:panelGrid>
      </h:form>
      <h:messages/>
